[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
cursive = { version = "0.20.0", default-features = false }
rand = "0.8.5"

[features]
default = ["cursive/ncurses-backend"]
windows-compatible = ["cursive/crossterm-backend"]